tests/baselines/reference/requireOfJsonFileWithAmd.errors.txt
error TS5070: Option '--resolveJsonModule' cannot be specified when 'moduleResolution' is set to 'classic'.
file1.ts(1,21): error TS2792: Cannot find module './b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


!!! error TS5070: Option '--resolveJsonModule' cannot be specified when 'moduleResolution' is set to 'classic'.
==== file1.ts (1 errors) ====
    import b1 = require('./b');
                        ~~~~~
!!! error TS2792: Cannot find module './b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    let x = b1.a;
    import b2 = require('./b.json');
    if (x) {
        let b = b2.b;
        x = (b1.b === b);
    }
    
==== b.json (0 errors) ====
    {
        "a": true,
        "b": "hello"
    }